slidy_tud:  * ADDED: worked on comprehensive image stretch handling (still some minor bugs, due to initialisation problems of the presets)

--- a/styles/mytud.css
+++ b/styles/mytud.css
@@ -523,7 +523,6 @@ td.image_box {
   #position: absolute;
   width: 100%;
   text-align: center;
-  display: inline-block;
   vertical-align: middle;
   #top: 50%;
   display: table-cell;
